// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup component renders as expected 1`] = `
<fieldset
  className="es-fieldset sc-EHOje gAPZeA"
>
  <label
    className="es-radio sc-bwzfXH iWvndJ sc-bdVaJa jBoKPV"
    disabled={false}
    htmlFor="test-option-1"
  >
    <input
      className="sc-htpNat kOMTgB"
      disabled={false}
      id="test-option-1"
      name="test"
      onClick={[Function]}
      type="radio"
      value={0}
    />
    <span
      className="es-radio__fill sc-bxivhb jNoHRi"
      fill="#fff"
    />
    Option 0
  </label>
  <label
    className="es-radio sc-bwzfXH iWvndJ sc-bdVaJa jBoKPV"
    disabled={false}
    htmlFor="test-option-2"
  >
    <input
      className="sc-htpNat kOMTgB"
      disabled={false}
      id="test-option-2"
      name="test"
      onClick={[Function]}
      type="radio"
      value={1}
    />
    <span
      className="es-radio__fill sc-bxivhb jNoHRi"
      fill="#fff"
    />
    Option 1
  </label>
  <label
    className="es-radio sc-bwzfXH iWvndJ sc-bdVaJa jBoKPV"
    disabled={false}
    htmlFor="test-option-3"
  >
    <input
      className="sc-htpNat kOMTgB"
      disabled={false}
      id="test-option-3"
      name="test"
      onClick={[Function]}
      type="radio"
      value={2}
    />
    <span
      className="es-radio__fill sc-bxivhb jNoHRi"
      fill="#fff"
    />
    Option 2
  </label>
</fieldset>
`;

exports[`RadioGroup component renders as expected with legend text 1`] = `
<fieldset
  className="es-fieldset sc-EHOje gAPZeA"
>
  <legend
    className="es-fieldset__legend sc-ifAKCX kkKCeA"
  >
    Test legend
  </legend>
  <label
    className="es-radio sc-bwzfXH iWvndJ sc-bdVaJa jBoKPV"
    disabled={false}
    htmlFor="test-option-1"
  >
    <input
      className="sc-htpNat kOMTgB"
      disabled={false}
      id="test-option-1"
      name="test"
      onClick={[Function]}
      type="radio"
      value={0}
    />
    <span
      className="es-radio__fill sc-bxivhb jNoHRi"
      fill="#fff"
    />
    Option 0
  </label>
  <label
    className="es-radio sc-bwzfXH iWvndJ sc-bdVaJa jBoKPV"
    disabled={false}
    htmlFor="test-option-2"
  >
    <input
      className="sc-htpNat kOMTgB"
      disabled={false}
      id="test-option-2"
      name="test"
      onClick={[Function]}
      type="radio"
      value={1}
    />
    <span
      className="es-radio__fill sc-bxivhb jNoHRi"
      fill="#fff"
    />
    Option 1
  </label>
  <label
    className="es-radio sc-bwzfXH iWvndJ sc-bdVaJa jBoKPV"
    disabled={false}
    htmlFor="test-option-3"
  >
    <input
      className="sc-htpNat kOMTgB"
      disabled={false}
      id="test-option-3"
      name="test"
      onClick={[Function]}
      type="radio"
      value={2}
    />
    <span
      className="es-radio__fill sc-bxivhb jNoHRi"
      fill="#fff"
    />
    Option 2
  </label>
</fieldset>
`;
